[package]
name = "book_management_system"
version = "0.1.0"
edition = "2021"

# [dependencies]
# mysql = "21.0"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# clap = { version = "4.0", features = ["derive"] }

# [dependencies]
# mysql = "22.0"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# clap = { version = "4.1", features = ["derive"] }
[dependencies]
mysql = "20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
